# orkg-predicates-clustering

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/processed/: comparison_predicates.json  dataset.json  mapping.json  split_statistics.txt  test_set.json  training_set.json
data/processed/by_comparison/: statistics.csv  statistics.txt
data/processed/by_comparisons/: statistics.csv  statistics.txt
data/raw/: comparison_predicates.json  uncompared_papers.json
data/results/: baseline_lda_results.json  baseline_research_fields_results.json  scibert_agglomerative_results.json  scibert_kmeans_results.json  tfidf_agglomerative_results.json  tfidf_kmeans_results.json
models/: orkgnlp-predicates-scibert-agglomerative-350.pkl  orkgnlp-predicates-scibert-kmeans-2050.pkl  orkgnlp-predicates-tfidf-agglomerative-1300.pkl  orkgnlp-predicates-tfidf-kmeans-1850.pkl  scibert_agglomerative_1850.pkl  scibert_kmeans_3150.pkl  scibert_test_representations.npz  scibert_training_representations.npz  tfidf_agglomerative_2050.pkl  tfidf_kmeans_1250.pkl
notebooks/: SciBERT_embeddings.ipynb  predicates_clustering_cluster_analysis.ipynb  predicates_clustering_scibert.ipynb  predicates_clustering_tfidf.ipynb  scibert_embeddings.ipynb  to_onnx.py
src/: __init__.py  main.py
src/data/: analyze_dataset.py  fetch_compared_papers.py  fetch_uncompared_papers.py  main.py  make_dataset.py  split_dataset.py
src/data/sparql/: queries.py  (+1 more)
src/models/: convert.py  evaluate.py  predict.py  train.py
src/util/: io.py  list.py  string.py  visualization.py
(+2 files in other folders)
