[tool.poetry]
name = "orkg-predicates-clustering"
version = "0.1.0"
description = "Experimental code-base of the predicates clustering service."
authors = ["Omar Arab Oghli <omar.araboghli@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
SPARQLWrapper = "2.0.0"
pandas = "1.3.5"
matplotlib = "3.5.2"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
